--- a/views/layouts/navigation.ejs
+++ b/views/layouts/navigation.ejs
@@ -2,8 +2,8 @@
     <nav>
         <ul>
             <li><a href="/">Shop</a></li>
+            <li><a href="/cart">Cart</a></li>
             <li><a href="/add-product">Add Product</a></li>
-            <li><a href="/cart">cart</a></li>
         </ul>
     </nav>
 </header>
