--- a/public/static/style.css
+++ b/public/static/style.css
@@ -34,7 +34,11 @@ header nav ul {
 
 header nav ul li {
     list-style: none;
-    margin-left: 10px;
+    margin: 0 20px;
+}
+
+header nav a {
+    text-decoration: none;
 }
 
 header nav {
